# reticulum

./: .gitignore  AUDIT.md  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  Dockerfile  LICENSE  Makefile  PYPI_SETUP.md  README.md  RELEASE_NOTES_v0.4.0.md  RESULTS.md  RULES.md  analysis_output.txt  analyze_results.py  build_release.sh  dub.json  platform_results.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tools.sh  task.md  test_new_implementation.json
.claude/commands/: commit-push.md  report.md  testing.md  version-bump.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: advanced-tests.yml  ci.yml  emergency-publish.yml  publish.yml  release.yml
docs/: architecture.md  integrations.md  scoring.md  sources.md
rules/exposure/: ambassador-emissary.yaml  ambassador.yaml  gateway-api.yaml  ingress.yaml  istio-nested.yaml  istio.yaml  loadbalancer.yaml  nodeport.yaml
rules/manifest/: k8s-security.yaml
rules/scoring/: auth-services.yaml  databases.yaml  internal.yaml  monitoring-findings.yaml  monitoring.yaml
rules/security/: host-network.yaml  iam-bindings.yaml  privileged.yaml  rbac.yaml  service-account.yaml
scripts/: README.md  commit-push.sh  create-test-repo.py  dev-check.sh  generate_test_sarif.py  pre-release-check.sh  quick-check.sh  release.sh  run-advanced-tests.sh  version-bump.sh  version-sync.sh
scripts/lib/: common.sh
src/: analyzer.d  analyzer.rs  app.d  graph.rs  ingestor.d  ingestor.rs  main.rs  mapper.d  mapper.rs  model.d  model.rs  pathfilter.rs  ui.rs
src/reticulum/: __init__.py  __main__.py  alternative_evidence_analyzer.py  build_context_analyzer.py  chart_resolver.py  cli.py  config.py  dependency_analyzer.py  deployment_target_generator.py  docker_runner.py  dockerfile_analyzer.py  dockerfile_parser.py  dot_builder.py  enhanced_exposure_scanner.py  enhanced_prioritizer.py  example_plugins.py  exposure_analyzer.py  findings_mapper.py  helm_chart_finder.py  hybrid_docker_runner.py  main.py  mermaid_builder.py  network_policy_analyzer.py  path_consolidator.py  path_resolution_engine.py  plugin_base.py  reverse_ownership_index.py  security_scanner.py  service_chart_registry.py  service_discovery_orchestrator.py  service_registry.py  smart_dockerfile_analyzer.py  unified_strategy_orchestrator.py
src/rules/: engine.d  engine.rs  mod.rs  model.d  parser.rs  path.rs
src/sources/: compose.rs  k8s.rs  mod.rs
test-results/: scan_results_20250821_001750.json  scan_results_20250821_002953.json
tests/: __init__.py  test_advanced_scenarios.py  test_exposure_scanner.py  test_network_policy_analyzer.py  test_security_scanner.py  test_security_scanner_advanced.py
tests/advanced-test-repo/: README.md  test-scenarios.md  validate_results.py
tests/fixtures/: synthetic-trivy.sarif
tests/monorepo-01/: README.md
tests/monorepo-02/: README.md
tests/monorepo-03/: README.md
tests/monorepo-04/: README.md
tests/monorepo-05/: README.md
tests/monorepo-06/: README.md
tests/monorepo-07/: README.md
tests/monorepo-08/k8s/: postgres-db.yaml  (+2 more)
tests/monorepo-09/: docker-compose.yml
tests/monorepo-10/: README.md
tests/test_data/: semgrep_results.sarif  trivy_results.sarif
(+127 files in other folders)
