[project]
name = "reticulum"
version = "0.7.0"
description = "Exposure Scanner for Cloud Infrastructure Security Analysis"
authors = [{name = "Jose Palanco", email = "jose.palanco@plexicus.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["security", "kubernetes", "helm", "devsecops", "cloud", "exposure", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pyyaml>=6.0",
    "docker>=6.1",
    "commitizen>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "black>=24.3.0",
    "commitizen>=4.10.0",
]

[project.scripts]
reticulum = "reticulum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/plexicus/reticulum"
Repository = "https://github.com/plexicus/reticulum"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
version_files = [
    "pyproject.toml:version",
    "src/reticulum/__init__.py:__version__",
    "src/reticulum/cli.py:version",
    "README.md:Latest Release: v"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_format = "keepachangelog"
changelog_incremental = true
major_version_zero = true
tag_format = "v$version"
legacy_tag_formats = [
    "v$version"
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
]
